<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:displaylrc="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/action_delete_lrc"
          android:icon="@drawable/ic_delete_black_48dp"
          displaylrc:showAsAction="always"
          android:title="@string/action_delete_lrc" />

    <item android:id="@+id/action_text_only"
          android:icon="@drawable/ic_timer_off_black_48dp"
          displaylrc:showAsAction="always"
          android:title="@string/action_text_only" />

    <item android:id="@+id/action_search_lrc"
          android:icon="@drawable/ic_search_black_48dp"
          displaylrc:showAsAction="never"
          android:title="@string/title_search_activity" />

    <!--<item android:id="@+id/action_edit_lrc"
          displaylrc:showAsAction="never"
          android:title="@string/action_edit_lrc" />-->
</menu>