<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:orientation="vertical" >
    
    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/items_vertical_margin"

        android:hint="@string/et_search_hint_title"
        android:imeOptions="actionNext"
        android:inputType="text" >
        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/et_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/items_vertical_margin"

        android:hint="@string/et_search_hint_artist"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/items_vertical_margin"
        android:text="@string/btn_search" />"

    <ListView
        android:id="@+id/lv_query_items" 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true" />
    
</LinearLayout>